--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -10,6 +10,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "GmarketSansLight";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .site_banner {
   display: flex;
   position: absolute;
@@ -18,32 +26,42 @@
   width: 100vw;
   background: url(../../imgs/home_bg.jpg) no-repeat;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .site_banner_container {
   display: flex;
   margin: 0 auto;
-  padding: 5rem 0;
+  padding: 3rem 0;
   align-items: flex-start;
 }
 
 .site_banner__contents {
   padding-top: 5rem;
-  display: flex;
-  width: 50%;
+  display: inline;
+  /* flex-direction: column; */
+  width: 70%;
   padding-right: 6rem;
   font-family: "GongGothicBold";
+  color: white;
   justify-content: center;
   align-items: flex-start;
+  text-align: left;
+  cursor: default;
 }
 
-.site_banner__contents {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  width: 70%;
-  color: white;
-  text-align: left;
+.site_banner__contents > span {
+  background: linear-gradient(rgba(0, 0, 0, 0.466), rgba(0, 0, 0, 0.795));
+  background-repeat: no-repeat;
+  background-size: 0;
+  display: inline;
+  transition: 0.5s ease;
+  width: 100%;
+  height: 100%;
+}
+
+.site_banner__contents > span:hover {
+  background-size: 100%;
 }
 
 .site_banner__title {
@@ -52,11 +70,24 @@
 }
 
 .site_banner__description {
+  display: inline;
   font-size: 4rem;
   margin: 0;
+}
+
+.site_banner__subdescription {
+  font-family: "GmarketSansLight";
+  font-size: 1.3rem;
+  width: 70%;
 }
 
 .site_banner__img_container > img {
   margin: 0;
   width: 20rem;
+}
+
+.site_banner__img_container {
+  display: flex;
+  padding: 2rem;
+  background-color: white;
 }
