--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -79,6 +79,7 @@
   font-family: "GmarketSansLight";
   font-size: 1.3rem;
   width: 70%;
+  transition: 0.5s ease;
 }
 
 .site_banner__img_container > img {
