--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -4,6 +4,15 @@
 
 :root {
   --background-color: #111fff;
+  --header-navbar-menu-font: "Y_Spotlight";
+}
+
+@font-face {
+  font-family: "Y_Spotlight";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/Y_Spotlight.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .header {
@@ -14,6 +23,7 @@
   width: 100%;
   height: 171px;
   background-color: var(--background-color);
+  font-family: var(--header-navbar-menu-font);
   font-size: 16px;
   z-index: 100;
 }
@@ -34,7 +44,7 @@
   margin: 0 auto;
   padding: 0;
   color: white;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   width: 50%;
   height: 100%;
 }
@@ -80,7 +90,7 @@
 
 @media screen and (max-width: 1920px) and (min-width: 671px) {
   .header_navbar_menu {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
 
   .header_navbar_menu > li {
