--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -4,6 +4,11 @@
 
 :root {
   --title-font-family: "GongGothicBold";
+  --circle-css-color: #0077c2;
+  --circle-html-color: #f50057;
+  --circle-javascript-color: #fdd835;
+  --circle-react-color: #ab47bc;
+  --circle-typescript-color: #29b6f6;
 }
 
 @font-face {
@@ -70,14 +75,36 @@
   fill: none;
 }
 
-.chart_inner {
+.chart_inner_css,
+.chart_inner_html,
+.chart_inner_javascript,
+.chart_inner_react,
+.chart_inner_typescript {
   display: flex;
-  stroke: #73e8ff;
   stroke-width: 2;
   fill: none;
   animation: chart_filling 1.5s reverse;
   transform: rotate(-90deg);
   transform-origin: center;
+}
+
+.chart_inner_html {
+  stroke: var(--circle-html-color);
+}
+
+.chart_inner_css {
+  stroke: var(--circle-css-color);
+}
+
+.chart_inner_javascript {
+  stroke: var(--circle-javascript-color);
+}
+.chart_inner_react {
+  stroke: var(--circle-react-color);
+}
+
+.chart_inner_typescript {
+  stroke: var(--circle-typescript-color);
 }
 
 .chart_text {
