--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -48,7 +48,7 @@
 .circle_chart_container {
   display: grid;
   grid-template-columns: repeat(5, 12rem);
-  grid-template-rows: repeat(1, 14rem);
+  grid-template-rows: repeat(1, 12rem);
   position: relative;
   align-items: center;
   width: 55%;
@@ -123,5 +123,51 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media screen and (max-width: 1300px) and (min-width: 779px) {
+  .skills {
+    top: 220%;
+  }
+
+  .skills_container {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0;
+    text-align: center;
+  }
+  .circle_chart_container {
+    display: grid;
+    grid-template-columns: repeat(3, 12rem);
+    grid-template-rows: repeat(2, 15rem);
+    width: 70%;
+    margin: 1rem auto;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .skills {
+    top: 240%;
+  }
+
+  .circle_chart_container {
+    width: auto;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 12rem);
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .skills {
+    top: 260%;
+  }
+
+  .circle_chart {
+    width: 100;
+    height: 100;
   }
 }
