--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -23,7 +23,7 @@
   position: absolute;
   top: 170px;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   background: url(../../imgs/home_bg.jpg) no-repeat center;
   background-size: cover;
