CSS: 반응형 CSS 추가 Contact, Projects, Skills component CSS

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+.portfolio {
+  display: flex;
+  flex-direction: column;
+}
+
 .footer {
   display: flex;
   width: 100%;
@@ -14,4 +19,22 @@
   justify-content: center;
   background-color: #111fff;
   color: white;
+}
+
+@media screen and (max-width: 1300px) and (min-width: 781px) {
+  .footer {
+    top: 570%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .footer {
+    top: 620%;
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .footer {
+    top: 640%;
+  }
 }
