--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -156,6 +156,7 @@
     margin: 1rem 0;
     text-align: center;
   }
+
   .circle_chart_container {
     display: grid;
     grid-template-columns: repeat(3, 12rem);
@@ -175,14 +176,19 @@
   .circle_chart_container {
     width: auto;
     padding: 0 1rem;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 12rem);
+    grid-template-columns: repeat(2, 12rem);
+    grid-template-rows: repeat(3, 12rem);
   }
 }
 
 @media screen and (max-width: 670px) {
   .skills {
     top: 270%;
+  }
+
+  .circle_chart_container {
+    grid-template-columns: repeat(2, 12rem);
+    grid-template-rows: repeat(3, 10rem);
   }
 
   .circle_chart {
