--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -69,6 +69,10 @@
   width: 100%;
 }
 
+.about_reason::selection {
+  background-color: green;
+}
+
 .about_reason_title {
   width: 65%;
   font-family: var(--reason-font-family);
