--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -17,7 +17,7 @@
 
 .header {
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -25,7 +25,23 @@
   background-color: var(--background-color);
   font-family: var(--header-navbar-menu-font);
   font-size: 16px;
+  color: white;
   z-index: 100;
+}
+
+.header_transparent {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 130px;
+  background-color: white;
+  font-family: var(--header-navbar-menu-font);
+  font-size: 16px;
+  color: blue;
+  z-index: 100;
+  box-shadow: 0 4px 4px -2px rgb(226, 223, 223);
 }
 
 .header_navbar {
@@ -43,7 +59,7 @@
   align-items: center;
   margin: 0 auto;
   padding: 0;
-  color: white;
+  color: inherit;
   font-size: 1.7rem;
   width: 50%;
   height: 100%;
@@ -58,7 +74,7 @@
 }
 
 .header_navbar_menu > li > a {
-  color: white;
+  color: inherit;
   text-decoration: none;
   position: relative;
   text-align: center;
@@ -66,7 +82,7 @@
   justify-content: center;
 }
 
-.header_navbar_menu > li > a::after {
+.header > nav > ul > li > a::after {
   background: none repeat scroll 0 0 transparent;
   bottom: -0.2rem;
   content: "";
@@ -75,6 +91,19 @@
   left: 50%;
   position: relative;
   background: #fff;
+  transition: width 0.3s ease 0s, left 0.2s ease 0s;
+  width: 0;
+}
+
+.header_transparent > nav > ul > li > a::after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: -0.2rem;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: relative;
+  background: blue;
   transition: width 0.3s ease 0s, left 0.2s ease 0s;
   width: 0;
 }
