--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -35,7 +35,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 130px;
+  height: 120px;
   background-color: white;
   font-family: var(--header-navbar-menu-font);
   font-size: 16px;
@@ -153,6 +153,10 @@
 
   .header {
     height: 111px;
+  }
+
+  .header_transparent {
+    height: 95px;
   }
 
   .header_toggle_button {
