--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -32,6 +32,11 @@
   width: 100%;
   height: auto;
   font-size: 16px;
+  animation: fadeIn 2s;
+}
+
+.contact_invisible {
+  opacity: 0;
 }
 
 .contact_container {
@@ -91,6 +96,18 @@
   color: black;
   font-family: var(--contact-font-family);
   font-size: 1.1rem;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
 
 @media screen and (max-width: 1300px) and (min-width: 781px) {
