--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,38 @@
   flex-direction: column;
 }
 
+.button_scrollUp {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 2.5rem;
+  color: black;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.button_scrollUp_invisible {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 2.5rem;
+  color: black;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.button_scrollUp:hover {
+  transform: scale(1.1);
+}
+
 .footer {
   display: flex;
   width: 100%;
