--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -36,6 +36,13 @@
 }
 
 .contact_invisible {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 420%;
+  width: 100%;
+  height: auto;
+  font-size: 16px;
   opacity: 0;
 }
 
