--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -170,7 +170,8 @@
 }
 
 .project_description_text > p:nth-child(2) {
-  color: blue;
+  color: darkblue;
+  width: 3rem;
 }
 
 .project_description_text > ul {
@@ -185,6 +186,10 @@
 .project_skills_title {
   font-family: var(--projects-font-family);
   font-weight: 600;
+  color: darkblue;
+  padding-bottom: 0.5rem;
+  width: 60%;
+  margin-left: 1.5rem;
 }
 
 .project_skill_stack {
@@ -207,6 +212,11 @@
   font-family: var(--projects-font-family);
   font-weight: 700;
   font-size: 0.9rem;
+  transition: all 0.05s ease;
+}
+
+.project_skill_stack > div:hover {
+  transform: scale(1.07);
 }
 
 .project_skill_stack > div > p {
