--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,34 @@
   box-sizing: border-box;
 }
 
+:root {
+  --footer--background-color: transparent;
+  --footer-color: gray;
+}
+
 .portfolio {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  min-width: 360px;
+  min-height: 100%;
+  height: auto;
+  position: relative;
 }
 
 .button_scrollUp {
   position: fixed;
-  bottom: 1rem;
+  bottom: 2rem;
   right: 1rem;
   width: 3rem;
   height: 3rem;
-  font-size: 2.5rem;
-  color: black;
+  font-size: 2.3rem;
+  color: blue;
   background-color: transparent;
   border: none;
   cursor: pointer;
   opacity: 1;
+  z-index: 2;
 }
 
 .button_scrollUp_invisible {
@@ -45,28 +56,30 @@
   height: 3rem;
   line-height: 3rem;
   font-size: 1rem;
-  position: absolute;
-  top: 455%;
+  position: relative;
+  bottom: 0;
+  left: 0;
   align-content: center;
-  justify-content: center;
-  background-color: #111fff;
-  color: white;
+  justify-content: space-between;
+  padding: 0 2rem;
+  background-color: var(--footer--background-color);
+  color: var(--footer-color);
 }
 
-@media screen and (max-width: 1300px) and (min-width: 781px) {
-  .footer {
-    top: 570%;
-  }
+.footer__link {
+  font-size: 3rem;
+  align-items: center;
 }
 
-@media screen and (max-width: 780px) {
-  .footer {
-    top: 620%;
-  }
+.footer__link > a {
+  text-decoration: none;
 }
 
-@media screen and (max-width: 670px) {
-  .footer {
-    top: 640%;
-  }
+.footer__copyright {
+  font-size: 1rem;
+}
+
+.footer__email {
+  font-size: 1rem;
+  line-height: 3rem;
 }
