--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -27,12 +27,14 @@
 .contact {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 420%;
+  position: relative;
   width: 100%;
   height: auto;
   font-size: 16px;
   animation: fadeIn 2s;
+  padding-bottom: 3rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact_invisible {
@@ -52,6 +54,7 @@
   width: 100%;
   height: auto;
   margin: 0 auto;
+  padding: 3rem 0;
 }
 
 .contact_title {
@@ -114,23 +117,5 @@
   to {
     opacity: 1;
     transform: translateY(0%);
-  }
-}
-
-@media screen and (max-width: 1300px) and (min-width: 781px) {
-  .contact {
-    top: 530%;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  .contact {
-    top: 580%;
-  }
-}
-
-@media screen and (max-width: 670px) {
-  .contact {
-    top: 590%;
   }
 }
