--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -21,6 +21,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  max-width: 1920px;
   height: 171px;
   background-color: var(--background-color);
   font-family: var(--header-navbar-menu-font);
@@ -117,13 +118,30 @@
   display: none;
 }
 
-@media screen and (max-width: 1920px) and (min-width: 671px) {
+@media screen and (max-width: 1920px) {
   .header_navbar_menu {
     font-size: 1.7rem;
+    align-items: center;
+    justify-content: center;
   }
 
   .header_navbar_menu > li {
     margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .header_navbar {
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+  }
+
+  .header_navbar_menu {
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    margin: 0;
   }
 }
 
