--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -20,8 +20,8 @@
 
 .site_banner {
   display: flex;
-  position: absolute;
-  top: 170px;
+  position: relative;
+  padding-top: 170px;
   height: 100vh;
   width: 100%;
   max-width: 100vw;
@@ -114,6 +114,12 @@
   .site_banner__title,
   .site_banner__description {
     font-size: 2em;
+  }
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1366px) {
+  .site_banner {
+    height: 70vh;
   }
 }
 
