--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -32,13 +32,13 @@
 .skills {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 212%;
+  position: relative;
   width: 100%;
   height: auto;
   color: black;
   font-size: 16px;
   animation: fadeIn 2s;
+  visibility: visible;
 }
 
 .skills_invisible {
@@ -50,7 +50,8 @@
   height: auto;
   color: black;
   font-size: 16px;
-  opacity: 0;
+  /* opacity: 0; */
+  visibility: hidden;
 }
 
 .skills_container {
@@ -193,10 +194,6 @@
 }
 
 @media screen and (max-width: 1300px) and (min-width: 781px) {
-  .skills {
-    top: 220%;
-  }
-
   .skills_container {
     width: 100%;
     align-items: center;
@@ -217,23 +214,15 @@
 }
 
 @media screen and (max-width: 780px) {
-  .skills {
-    top: 240%;
-  }
-
   .circle_chart_container {
     width: auto;
     padding: 0 1rem;
     grid-template-columns: repeat(2, 12rem);
-    grid-template-rows: repeat(3, 12rem);
+    grid-template-rows: repeat(3, 17rem);
   }
 }
 
 @media screen and (max-width: 670px) {
-  .skills {
-    top: 270%;
-  }
-
   .circle_chart_container {
     grid-template-columns: repeat(2, 12rem);
     grid-template-rows: repeat(3, 10rem);
