--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -22,7 +22,8 @@
   display: flex;
   position: relative;
   padding-top: 170px;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   width: 100%;
   max-width: 100vw;
   background: url(../../imgs/home_bg.jpg) no-repeat center;
@@ -118,9 +119,6 @@
 }
 
 @media screen and (max-width: 1024px) and (max-height: 1366px) {
-  .site_banner {
-    height: 70vh;
-  }
 }
 
 @media screen and (max-width: 900px) {
@@ -152,5 +150,56 @@
 
   .site_banner__img_container > img {
     width: 17rem;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .site_banner {
+    top: 30px;
+  }
+
+  .site_banner_container {
+    margin: 0 auto;
+    width: 100%;
+    align-items: center;
+  }
+
+  .site_banner__contents {
+    width: 85%;
+    padding: 0;
+    margin: 0.5rem;
+  }
+
+  .site_banner__img_container {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .site_banner {
+    top: 10px;
+    padding-top: 100px;
+  }
+
+  .site_banner__title {
+    font-size: 1.5em;
+  }
+
+  .site_banner__contents > span {
+    font-size: 0.9em;
+  }
+
+  .site_banner__subdescription {
+    font-size: 0.9rem;
+    width: 85%;
+  }
+
+  .site_banner__img_container {
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .site_banner__img_container > img {
+    width: 12rem;
   }
 }
