--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -38,7 +38,8 @@
   color: black;
   font-size: 16px;
   animation: fadeIn 2s;
-  visibility: visible;
+  animation-fill-mode: backwards;
+  opacity: 1;
 }
 
 .skills_invisible {
@@ -50,8 +51,7 @@
   height: auto;
   color: black;
   font-size: 16px;
-  /* opacity: 0; */
-  visibility: hidden;
+  opacity: 0;
 }
 
 .skills_container {
@@ -214,11 +214,24 @@
 }
 
 @media screen and (max-width: 780px) {
+  .skills {
+    align-items: center;
+  }
+
+  .skills_container {
+    width: 90%;
+    align-items: center;
+  }
+
   .circle_chart_container {
     width: auto;
     padding: 0 1rem;
     grid-template-columns: repeat(2, 12rem);
     grid-template-rows: repeat(3, 17rem);
+  }
+
+  .skills_title {
+    margin: 1rem auto;
   }
 }
 
@@ -231,5 +244,34 @@
   .circle_chart {
     width: 100;
     height: 100;
+  }
+}
+@media screen and (max-width: 540px) and (max-height: 720px) {
+  .circle_chart_container {
+    grid-template-columns: repeat(2, 12rem);
+    grid-template-rows: repeat(3, 14rem);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .circle_chart_container {
+    grid-template-columns: repeat(2, 10rem);
+    grid-template-rows: repeat(3, 15rem);
+    margin: 0;
+    width: 90%;
+  }
+
+  .circle_chart {
+    transform: scale(1.1);
+  }
+
+  .chart_typescript_text,
+  .chart_javascript_text,
+  .chart_react_text,
+  .chart_css_text,
+  .chart_html_text,
+  .chart_firebase_text {
+    font-size: 0.8rem;
+    margin: 1rem 0;
   }
 }
