--- a/src/App.css
+++ b/src/App.css
@@ -107,11 +107,32 @@
     right: 3rem;
     bottom: 1rem;
   }
+
+  .footer__link {
+    font-size: 2.5rem;
+  }
+
+  .footer__copyright {
+    font-size: 0.7rem;
+  }
+
+  .footer__email {
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (max-width: 420px) {
   .button_scrollUp {
     right: 1rem;
     bottom: 1rem;
+  }
+
+  .footer__copyright {
+    font-size: 0.4rem;
+  }
+
+  .footer__email {
+    font-size: 0.4rem;
+    color: blue;
   }
 }
