--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -119,3 +119,13 @@
     transform: translateY(0%);
   }
 }
+
+@media screen and (max-width: 780px) {
+  .contact_container > ul > li {
+    font-size: 1.5rem;
+  }
+
+  .contact_paragraph {
+    font-size: 1rem;
+  }
+}
