--- a/src/components/skills/skills.module.css
+++ b/src/components/skills/skills.module.css
@@ -40,6 +40,7 @@
   animation: fadeIn 2s;
   animation-fill-mode: backwards;
   opacity: 1;
+  margin: 0 auto;
 }
 
 .skills_invisible {
@@ -213,6 +214,26 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .circle_chart {
+    transform: scale(1.3);
+  }
+
+  .circle_chart_container {
+    grid-template-columns: repeat(3, 12rem);
+    grid-template-rows: repeat(2, 16rem);
+  }
+
+  .chart_typescript_text,
+  .chart_javascript_text,
+  .chart_react_text,
+  .chart_css_text,
+  .chart_html_text,
+  .chart_firebase_text {
+    margin: 2rem 0;
+  }
+}
+
 @media screen and (max-width: 780px) {
   .skills {
     align-items: center;
@@ -221,6 +242,11 @@
   .skills_container {
     width: 90%;
     align-items: center;
+  }
+
+  .circle_chart {
+    transform: scale(1.4);
+    transition: all ease;
   }
 
   .circle_chart_container {
@@ -240,29 +266,15 @@
     grid-template-columns: repeat(2, 12rem);
     grid-template-rows: repeat(3, 10rem);
   }
-
-  .circle_chart {
-    width: 100;
-    height: 100;
-  }
 }
 @media screen and (max-width: 540px) and (max-height: 720px) {
   .circle_chart_container {
     grid-template-columns: repeat(2, 12rem);
     grid-template-rows: repeat(3, 14rem);
   }
-}
-
-@media screen and (max-width: 480px) {
-  .circle_chart_container {
-    grid-template-columns: repeat(2, 10rem);
-    grid-template-rows: repeat(3, 15rem);
-    margin: 0;
-    width: 90%;
-  }
 
   .circle_chart {
-    transform: scale(1.1);
+    transform: scale(1.8);
   }
 
   .chart_typescript_text,
@@ -272,6 +284,48 @@
   .chart_html_text,
   .chart_firebase_text {
     font-size: 0.8rem;
-    margin: 1rem 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .skills_title {
+    margin: 2.5rem auto;
+  }
+
+  .circle_chart_container {
+    grid-template-columns: repeat(2, 10rem);
+    grid-template-rows: repeat(3, 13rem);
+    margin: 0;
+    width: 90%;
+  }
+
+  .circle_chart {
+    transform: scale(2.2);
+  }
+
+  .chart_typescript_text,
+  .chart_javascript_text,
+  .chart_react_text,
+  .chart_css_text,
+  .chart_html_text,
+  .chart_firebase_text {
+    font-size: 0.8rem;
+    margin: 2rem 0;
+  }
+
+  .chart_firebase_text,
+  .chart_react_text {
+    margin: 2rem 0;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .circle_chart_container {
+    grid-template-columns: repeat(2, 10rem);
+    grid-template-rows: repeat(3, 11rem);
+  }
+
+  .circle_chart_container {
+    margin-top: 2rem;
   }
 }
