favicon 변경, 반응형 css 수정 및 header 버튼 클릭시 스크롤 창크기 반응형 조정

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -250,7 +250,11 @@
 
 @media screen and (max-width: 420px) {
   .header {
-    height: 80px;
+    height: 75px;
+  }
+
+  .header_white {
+    height: 75px;
   }
 
   .header_toggle_button {
