--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,18 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
   --footer--background-color: transparent;
   --footer-color: gray;
+  --footer-font-family: "Pretendard-Regular";
 }
 
 .portfolio {
@@ -65,6 +74,7 @@
   padding: 0 2rem;
   background-color: var(--footer--background-color);
   color: var(--footer-color);
+  font-family: var(--footer-font-family);
 }
 
 .footer_invisible {
@@ -118,6 +128,20 @@
 
   .footer__email {
     font-size: 0.8rem;
+  }
+}
+
+@media screen AND (max-width: 540px) {
+  .footer {
+    flex-direction: column;
+  }
+
+  .footer__link {
+    height: 2rem;
+  }
+
+  .footer__copyright {
+    height: 1.5rem;
   }
 }
 
